Fixed typo %{} to ${}

--- a/programmatic/Makefile.defs
+++ b/programmatic/Makefile.defs
@@ -2,7 +2,7 @@
 export OWNER=apache
 export DocumentRoot=""
 export LIBDIR=${DocumentRoot}/cgi-common
-export PYTHONPATH=.:${LIBDIR}:%{PYTHONPATH}
+export PYTHONPATH=.:${LIBDIR}:${PYTHONPATH}
 
 # a few convenient transforms for making cgi scripts, css files, and
 # shell scripts with variable substitution and macros
