install.sh programmatic/Makefile.defs programmatic/admin/Makefile
2003-01-07  Manish Singh  <yosh@gimp.org>

        * install.sh
        * programmatic/Makefile.defs
        * programmatic/admin/Makefile
        * programmatic/admin/contest/Makefile
        * programmatic/admin/news/Makefile
        * programmatic/contest/Makefile: get the python interpreter to use
        from the environment.

--- a/programmatic/Makefile.defs
+++ b/programmatic/Makefile.defs
@@ -2,6 +2,7 @@
 export OWNER=apache
 export DocumentRoot=""
 export LIBDIR=${DocumentRoot}/cgi-common
+export PYTHON=python
 export PYTHONPATH=.:${LIBDIR}:${PYTHONPATH}
 
 # a few convenient transforms for making cgi scripts, css files, and
