--- a/programmatic/Makefile.defs
+++ b/programmatic/Makefile.defs
@@ -2,7 +2,7 @@
 export DocumentRoot=""
 export LIBDIR=${DocumentRoot}/cgi-common
 export PYTHONPATH:=.:${LIBDIR}:${PYTHONPATH}
-export PYTHON=python2.2
+export PYTHON?=python2.2
 
 # a few convenient transforms for making cgi scripts, css files, and
 # shell scripts with variable substitution and macros
