--- a/programmatic/admin/Makefile
+++ b/programmatic/admin/Makefile
@@ -33,14 +33,18 @@ clean mrproper:
 install: install-first install-news install-contest
 
 install-first: all
+	install --mode=744 dot-forward   ${DocumentRoot}/.forward
+
+	install wgo_admin.py            ${LIBDIR}
+
 	install --mode=755 -d `${PYTHON} -c 'import wgo_config; print wgo_config.admin_path'`
 	#install --mode=744 dot-htaccess ${DocumentRoot}/admin/.htaccess
 	install --mode=744 dot-password `${PYTHON} -c 'import wgo_config; print wgo_config.admin_path'`/passwords
-	install --mode=744 dot-forward   ${DocumentRoot}/.forward
 	install admin-menu.inc          `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/includes
+
 	install wgo-admin.css           `${PYTHON} -c 'import wgo_config; print wgo_config.admin_path'`
-	install wgo_admin.py            ${LIBDIR}
 	install index.html              `${PYTHON} -c 'import wgo_config; print wgo_config.admin_path'`
+	install wgo-admin-head.xhtml    `${PYTHON} -c 'import wgo_config; print wgo_config.admin_path'`
 	install howto.html              `${PYTHON} -c 'import wgo_config; print wgo_config.admin_path'`
 
 install-news: news
