Scripts to fetch the most recent lines of the ChangeLog from cvs.

--- a/programmatic/about/ChangeLogs/Makefile
+++ b/programmatic/about/ChangeLogs/Makefile
@@ -7,13 +7,14 @@ all: usage ChangeLog changelog-xhtml.css changelog-xhtml-mono.css
 usage:
 
 
-ChangeLog: ChangeLog-xhtml.cgi gimp-unstable gegl-unstable gimp-help
+ChangeLog: ChangeLog-xhtml.cgi changelog-cron gimp-unstable gegl-unstable gimp-help gimp-print film-gimp
 
 gimp-unstable: gimp-unstable.sh
-
 gegl-unstable: gegl-unstable.sh
-
 gimp-help: gimp-help.sh
+gimp-print: gimp-print.sh
+film-gimp: film-gimp.sh
+changelog-chron: changelog-cron.sh
 
 ChangeLog-xhtml.cgi: ChangeLog-xhtml.py
 
@@ -22,7 +23,7 @@ changelog-xhtml.css: changelog-xhtml.cPP
 changelog-xhtml-mono.css: changelog-xhtml-mono.cPP
 
 clean mrproper:
-	/bin/rm -f *.cgi *~ changelog-xhtml.css changelog-xhtml-mono.css gegl-unstable gimp-unstable gimp-help
+	/bin/rm -f *.cgi *~ changelog-xhtml.css changelog-xhtml-mono.css ChangeLog-xhtml.cgi changelog-cron gimp-unstable gegl-unstable gimp-help gimp-print film-gimp
 
 install: install-first
 
@@ -32,5 +33,8 @@ install-first: all
 	install --mode=755 gimp-unstable       `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
 	install --mode=755 gegl-unstable       `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
 	install --mode=755 gimp-help           `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
+	install --mode=755 gimp-print          `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
+	install --mode=755 film-gimp           `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
+	install --mode=755 changelog-cron      `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
 	install --mode=644 changelog-xhtml.css `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
 	install --mode=644 changelog-xhtml-mono.css `${PYTHON} -c 'import wgo_config; print wgo_config.DocumentRoot_path'`/about/ChangeLogs
