*** empty log message ***

--- a/programmatic/Makefile
+++ b/programmatic/Makefile
@@ -2,7 +2,7 @@
 #
 include Makefile.defs
 
-all: usage wgo_config.py extended.css rdf-news.css wgo-css.cpp admin contest about
+all: usage wgo_config.py tools extended.css rdf-news.css wgo-css.cpp admin contest about
 
 usage:
 	@if [ ${DocumentRoot} = "" ]; then echo "USAGE: make DocumentRoot=<DocumentRoot>target"; exit 1; fi
@@ -44,6 +44,9 @@ contest: wgo_config.py
 about: wgo_config.py
 	cd about && $(MAKE) all
 
+tools:
+	cd tools && $(MAKE) all
+
 extended.css:
 
 rdf-news.css: rdf-news.cpp
@@ -53,6 +56,7 @@ clean mrproper:
 	cd contest && $(MAKE) clean
 	cd admin && $(MAKE) clean
 	cd about && $(MAKE) clean
+	cd tools && $(MAKE) clean
 
 install: install-common install-admin install-contest install-about
 
