Modified programmatic/contest/gallery.py to use the standard wgo.py preamble and head.
Top-level Makefile is now used from install.sh

Deleted unix/index.html since it is a generated file.

Moved unix/index-in.html to unix/index.htrw, the top-level
Makefile knows how to translate a .htrw file into a .html file.

Updated the top-level Makefile with rules for building a .html
file from a .htrw file

Modified programmatic/tools/rewrite_attrs.py for cleaner output.

--- a/programmatic/tools/Makefile
+++ b/programmatic/tools/Makefile
@@ -1,10 +1,14 @@
 include ../Makefile.defs
 
-all: rewrite_attrs
+all: rewrite_attrs ssi-pp
 
 rewrite_attrs: rewrite_attrs.py
 	sed -e 's|$${SRCDIR}|${SRCDIR}|g' -e 's|$${PYTHON}|${PYTHON}|g' $< > $@
 	chmod 755 $@
 
+ssi-pp: ssi-pp.py
+	sed -e 's|$${SRCDIR}|${SRCDIR}|g' -e 's|$${PYTHON}|${PYTHON}|g' $< > $@
+	chmod 755 $@
+
 clean:
-	/bin/rm -f *.pyc *~ rewrite_attrs
+	/bin/rm -f *.pyc *~ rewrite_attrs ssi-pp
