*** empty log message ***

--- a/programmatic/tools/Makefile
+++ b/programmatic/tools/Makefile
@@ -1,12 +1,16 @@
 include ../Makefile.defs
 
-all: rewrite_attrs ssi-pp
+all: rewrite_attrs ssi-pp gimpwebtool
 
 rewrite_attrs: rewrite_attrs.py
 	sed -e 's|$${SRCDIR}|${SRCDIR}|g' -e 's|$${PYTHON}|${PYTHON}|g' $< > $@
 	chmod 755 $@
 
 ssi-pp: ssi-pp.py
+	sed -e 's|$${SRCDIR}|${SRCDIR}|g' -e 's|$${PYTHON}|${PYTHON}|g' $< > $@
+	chmod 755 $@
+
+gimpwebtool: gimpwebtool.py
 	sed -e 's|$${SRCDIR}|${SRCDIR}|g' -e 's|$${PYTHON}|${PYTHON}|g' $< > $@
 	chmod 755 $@
 
