Buffed up the top-level Makefile to declare .PHONY targets. The _install
* Buffed up the top-level Makefile to declare .PHONY targets.  The
  _install target is now called install.

* Fixed a bug in rewrite_attrs.py which caused URLs containing an
  octothorpe to be truncated and breaking rewrite_attrs.

--- a/programmatic/Makefile
+++ b/programmatic/Makefile
@@ -2,6 +2,8 @@
 #
 include Makefile.defs
 
+.PHONY: all usage clean install
+
 all: webtools usage wgo_config.py extended.css rdf-news.css wgo-css.cpp admin contest about develop
 
 usage:
