Remove multiple blank lines from preprocessed CSS output.
* Remove multiple blank lines from preprocessed CSS output.

--- a/programmatic/Makefile.defs
+++ b/programmatic/Makefile.defs
@@ -8,10 +8,10 @@ export SRCDIR?=$(shell pwd)
 # a few convenient transforms for making cgi scripts, css files, and
 # shell scripts with variable substitution and macros
 %.css: %.cpp
-	cpp -P -pedantic -Wall -nostdinc ${CSSFLAGS} $<  |sed -e 's/\\#/#/g' > $@
+	cpp -P -pedantic -Wall -nostdinc ${CSSFLAGS} $<  |cat -s |sed -e 's/\\#/#/g' > $@
 
 %.css: %.cPP
-	cpp -P -pedantic -Wall -nostdinc ${CSSFLAGS} $<  |sed -e 's/\\#/#/g' > $@
+	cpp -P -pedantic -Wall -nostdinc ${CSSFLAGS} $<  |cat -s |sed -e 's/\\#/#/g' > $@
 
 %.cgi: %.py
 	sed -e 's|$${LIBDIR}|${LIBDIR}|g' -e 's|$${PYTHON}|${PYTHON}|g' $< > $@
